changed contact link target

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
 								</form> -->
 								<br>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/minh-v/" class="icon brands fa-linkedin"><span class="label"></span></a></li>
-									<li><a href="#" onClick="sendEmail()" class="icon far fa-envelope"><span class="label"></span></a></li>
-									<li><a href="www.github.com/minhvuong1" class="icon brands fa-github"><span class="label"></span></a></li>
+									<li><a href="https://www.linkedin.com/in/minh-v/" target="_blank" class="icon brands fa-linkedin"><span class="label"></span></a></li>
+									<li><a href="#" onClick="sendEmail()" target="_blank" class="icon far fa-envelope"><span class="label"></span></a></li>
+									<li><a href="https://www.github.com/minhvuong1" target="_blank" class="icon brands fa-github"><span class="label"></span></a></li>
 								</ul>
 							</article>
 
