--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<span style="opacity: 0.9;" class="images main"><img src="images/me.jpg" alt="" /></span>
-								<p>Born and raised in Melbourne, Australia. I am an asipiring Software Developer pursuing my passion for learning and my lifelong interest in technology by entering into the tech world, going straight from highschool to a Software Engineering bootcamp at General Assembly.</p>
-								<p>I love teaming up with fun, hard-working people who are passionate about what they do, push themselves to grow and have big dreams. Eager and enthusiastic with an open-mind, I cherish new ways of thinking and encourage thoughtful debate to generate new ideas.</p>
-								<!-- <p>Having , I developed a thorough understanding of managing tight deadlines and efficient problem-solving skills. </p> -->
+								<p>Born and raised in Melbourne, Australia. I am an aspiring Software Developer pursuing my passion for learning and my deep-rooted interest in technology by entering into the tech world, going straight from highschool to a Software Engineering bootcamp at General Assembly.</p>
+								<p>I love teaming up with fun, ambitious people who are passionate about what they do, push themselves to grow and have big dreams. Persistant and enthusiastic with an open-mind, I admire new ways of thinking and encourage thoughtful debate to generate new ideas.</p>
 								<p>As a recent graduate, I now look to secure the right role that will allow me to further develop my software development skills within the tech industry and to continue bringing exciting ideas to life with code.</p>
 								<br>
 								<h3 class="major">Skills</h3>
