--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 									<li>Ruby, Sinatra</li>
 									<li>Node.js/Express</li>
 									<li>SQL/PostgreSQL</li>
-									<li>Git, Github, Heroku</li>
+									<li>TDD/OOP</li>
+									<li>Git, Github</li>
+									<li>Heroku, Surge</li>
 								</ul>
 								<h3 class="major">Learning / On the radar</h3>
 								<ul style="margin-top: -16px;">
