--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
 							<article id="work">
 								<h2 class="major">Experience</h2>
 								<span class="image main"><img src="images/pic03.jpeg" alt="" /></span>
-								<p class="download-resume"><a style="text-decoration: none; border-bottom: none;" href="https://drive.google.com/file/d/1T5o_x4ADEVtTzIxAcf-CozCqS5wu75Xc/view" target="_blank">Download Resume</a></p>
+								<p class="download-resume" onclick="window.open('https://drive.google.com/file/d/1lCsZRiInnDqFFvImc5N78ChrTi1BhyVE/view', '_blank')" 
+								><a style="text-decoration: none; border-bottom: none;" href="https://drive.google.com/file/d/1lCsZRiInnDqFFvImc5N78ChrTi1BhyVE/view" target="_blank">Download Resume</a></p>
 								<br>
 								<section style="margin-top: 4px;">
 									<h3 style="font-size: 20px;  padding-bottom: 5px;  border-bottom: 1px solid white;">2020 ~ General Assembly</h3>
