--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<span style="opacity: 0.9;" class="images main"><img src="images/me.jpg" alt="" /></span>
-								<p>Born and raised in Melbourne, Australia. I am an aspiring Software Developer pursuing my passion for learning and my deep-rooted interest in technology by entering into the tech world, going straight from highschool to a Software Engineering bootcamp at General Assembly.</p>
-								<p>I love teaming up with fun, ambitious people who are passionate about what they do, push themselves to grow and have big dreams. Persistant and enthusiastic with an open-mind, I admire new ways of thinking and encourage thoughtful debate to generate new ideas.</p>
-								<p>As a recent graduate, I now look to secure the right role that will allow me to further develop my software development skills within the tech industry and to continue bringing exciting ideas to life with code.</p>
+								<p style="margin: -14px 0 0 0;">Born and raised in Melbourne, Australia. I am an aspiring Software Developer pursuing my passion for learning and my deep-rooted interest in technology by entering into the tech world, going straight from highschool to a Software Engineering bootcamp at General Assembly.</p>
+								<p style="margin: 10px 0;">I love teaming up with fun, ambitious people who are passionate about what they do, push themselves to grow and have big dreams. Persistant and enthusiastic with an open-mind, I admire new ways of thinking and encourage thoughtful debate to generate new ideas.</p>
+								<p style="margin: 5px 0 0 0;">As a recent graduate, I now look to secure the right role that will allow me to further develop my software development skills within the tech industry and to continue bringing exciting ideas to life with code.</p>
 								<br>
 								<h3 class="major">Skills</h3>
 								<ul style="margin-top: -16px;">
